--- a/package.json
+++ b/package.json
@@ -11,20 +11,33 @@
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@hookform/resolvers": "^3.1.0",
     "@iconify/react": "^4.1.0",
     "@mui/material": "^5.12.3",
     "@mui/utils": "^5.12.3",
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "4.14.0",
     "@types/node": "20.0.0",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
+    "next-auth": "^4.22.1",
     "nextjs-toploader": "^1.4.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
     "sass": "^1.62.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "prisma": "^4.14.0"
   }
 }
