--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ NEXT_PUBLIC_JWT_REFRESH_TOKEN_SECRET= 7c4c1c50-3230-45bf-9eae-c9b2e401c767
 DATABASE_URL="postgresql://root:root@localhost:5432/rtravel_2?schema=public"
 
 NEXT_PUBLIC_APPURL="http://localhost:3000/"
+
+NEXTAUTH_SECRET= dd5f3089-40c3-403d-af14-d0c228b05cb4
+NEXTAUTH_URL= "http://localhost:3000/"
