--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.8",
     "@hookform/resolvers": "^3.1.0",
     "@iconify/react": "^4.1.0",
+    "@mui/lab": "5.0.0-alpha.131",
     "@mui/material": "^5.12.3",
     "@mui/utils": "^5.12.3",
     "@mui/x-date-pickers": "^6.5.0",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "sass": "^1.62.1",
+    "swr": "^2.1.5",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
   },
