--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "5.0.0-alpha.131",
     "@mui/material": "^5.12.3",
     "@mui/utils": "^5.12.3",
+    "@mui/x-data-grid": "6.0.3",
     "@mui/x-date-pickers": "^6.5.0",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "4.14.0",
@@ -47,5 +48,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/react-datepicker": "^4.11.2",
     "prisma": "^4.14.0"
+  },
+  "resolutions": {
+    "@mui/x-data-grid/@mui/system": "5.12.1"
   }
 }
