--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "icons": [
     {
-      "src": "/path/to/icon.png",
+      "src": "https://picsum.photos/192/192",
       "sizes": "192x192",
       "type": "image/png"
     }
