--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "keen-slider": "^6.8.5",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
+    "next-pwa": "^5.6.0",
     "nextjs-toploader": "^1.4.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
