--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^9.1.4",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@hookform/resolvers": "^3.1.0",
@@ -32,7 +33,6 @@
     "keen-slider": "^6.8.5",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
-    "next-pwa": "^5.6.0",
     "nextjs-toploader": "^1.4.2",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
@@ -43,7 +43,6 @@
     "sass": "^1.62.1",
     "swr": "^2.1.5",
     "typescript": "5.0.4",
-    "workbox-window": "^7.0.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
